--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: israelben009@gmail.com
 website: benisrael.dev
 
 # Dark Mode (true/false/never)
-darkmode: true
+darkmode: false
 
 # Social links
 #twitter_username: facespics
@@ -21,8 +21,8 @@ github_username:  benisrael29
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: jameswgrant
-linkedin_username: jameswgrant
+#instagram_username: jameswgrant
+linkedin_username: israelben
 # xing_username: jekyll
 # pinterest_username: jekyll
 #youtube_username: globalmtb
@@ -48,9 +48,9 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name's is Ben. I am an undergraduate software engineer in Brisbane, AU. I have experiance making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  I am most skilled in: <mark>AZURE</mark>, <mark>Python</mark>, <mark>Machine Learning</mark> and <mark>BJJ</mark>. 
 
 content:
   - title: Projects # Title for the section
